enable to read .css file

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block customcss %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static "accounts/style.css" %}">
 {% endblock customcss %}
 
 {% block content %}
