--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -14,4 +14,7 @@
         <input type="password" id="inputPassword2" class="form-control" name="password" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">送信</button>
     </form>
+    <button type="button" class="btn btn-lg btn-success btn-block" onclick="location.href='{% url 'accounts:guest' %}'">
+        ゲストとしてログイン
+    </button>
 {% endblock content %}
