--- a/accounts/static/accounts/style.css
+++ b/accounts/static/accounts/style.css
@@ -19,11 +19,8 @@ body {
   padding: 15px;
   margin: auto;
 }
-.form-signin .checkbox {
-  font-weight: 400;
-}
 .form-signin .form-control {
-  position: relative;
+  position: static;
   box-sizing: border-box;
   height: auto;
   padding: 10px;
