--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -13,8 +13,11 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword2" class="form-control" name="password" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">送信</button>
+        <button type="button" class="btn btn-lg btn-danger btn-block" onclick="location.href='{% url 'accounts:register' %}'">
+            新規登録
+        </button>
+        <button type="button" class="btn btn-lg btn-success btn-block" onclick="location.href='{% url 'accounts:guest' %}'">
+            ゲストとしてログイン
+        </button>
     </form>
-    <button type="button" class="btn btn-lg btn-success btn-block" onclick="location.href='{% url 'accounts:guest' %}'">
-        ゲストとしてログイン
-    </button>
 {% endblock content %}
