--- a/templates/apartment/list.html
+++ b/templates/apartment/list.html
@@ -31,7 +31,8 @@
                     <div class="card mb-4 shadow-sm">
                         <img class="card-img-top"
                              src="{{ apartment.appearance }}"
-                             alt="Card image cap">
+                             alt="Card image cap"
+                             height="200px">
                         <div class="card-body">
                             <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                             <p class="card-text">{{ apartment.name }}</p>
