--- a/templates/apartment/list.html
+++ b/templates/apartment/list.html
@@ -42,11 +42,6 @@
                                     <p class="card-text">{{ apartment.name }}</p>
                                     <p class="card-text">{{ apartment.address }}</p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button> -->
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細
-                                            </button>
-                                        </div>
                                         <!-- <small class="text-muted">9 mins</small> -->
                                         <small class="text-muted">築年数：{{ apartment.age }}年</small>
 
@@ -73,15 +68,17 @@
                             <tr>
                                 <th>部屋番号</th>
                                 <th>賃料</th>
+                                <th>  </th>
                             </tr>
                             </thead>
                             <tbody>
-                            {% for room in apartment.room_set.all %}
-                                <tr>
-                                    <td>{{ room.number }}</td>
-                                    <td>{{ room.rent }}万円</td>
-                                </tr>
-                            {% endfor %}
+                                {% for room in apartment.room_set.all %}
+                                    <tr>
+                                        <td width="40%">{{ room.number }}</td>
+                                        <td width="40%">{{ room.rent }}万円</td>
+                                        <td width="20%" align="center"><button type="button" class="btn btn-sm btn-outline-secondary">詳細</button></td>
+                                    </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
