--- a/templates/apartment/detail.html
+++ b/templates/apartment/detail.html
@@ -52,6 +52,18 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
+    <div class="container">
+        {% if room_object.isRentable == True %}
+            <span class="badge badge-success m-2"><h6 class="m-2">ご予約可能</h6></span>
+        {% else %}
+            <span class="badge badge-info m-2"><h6 class="m-2">ご予約不可</h6></span>
+        {% endif %}
+        {% if room_object.areBathAndToiletSeparated == True %}
+            <span class="badge badge-primary m-2"><h6 class="m-2">バストイレ別</h6></span>
+        {% endif %}
+    </div>
+
     <table class="table table-striped container">
         <tbody>
         <tr>
