--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="{% static "accounts/style.css" %}">
 {% endblock customcss %}
 
+{% block title %}
+    <title>ログアウト</title>
+{% endblock title %}
+
 {% block content %}
     <form class="form-signin">
         <a>ログアウトしました</a>
