--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" type="text/css" href="{% static "accounts/style.css" %}">
 {% endblock customcss %}
 
+{% block title %}
+    <title>新規アカウント登録</title>
+{% endblock title %}
+
 {% block content %}
     <form class="form-signin" method="POST" action=''>{% csrf_token %}
         <h1 class="h3 mb-3 font-weight-normal">登録画面</h1>
